Closed Bug 608013 Opened 14 years ago Closed 13 years ago

Silverlight: Firefox window appears over fullscreen window that is supposed to be fullscreen

Categories

(Core Graveyard :: Plug-ins, defect)

All
Windows 7
defect
Not set
normal

Tracking

(blocking2.0 -)

VERIFIED FIXED
Tracking Status
blocking2.0 --- -

People

(Reporter: sunpil, Assigned: jimm)

References

Details

Attachments

(3 files)

Silverlight has a feature that allows a fullscreen window to be pinned to a monitor screen in cases of multi-mon setup. With Firefox 4 Beta 8 with the fullscreen window showing, we put up a dialog asking the user if they want to allow it. Upon returning from this dialog, FireFox 4 out-of-process hosting is bringing the browser window to the front (over top of our full-screen window).  Neither Safari nor Chrome do this when we’re hosted out of process.

Specifically, we’d like FireFox not to bring the browser to the front (unless specifically requested by a user interaction, of course) while the host process has a window open.   Our full-screen window is created at the NSModalPanelWindowLevel, in case it’s necessary to identify it specifically.

I am going to include specific repro steps soon.
To repro this bug a private drop of Silverlight is needed.
Hardware: x86 → x86_64
blocking2.0: --- → ?
I don't think this blocks, although we'd take an appropriately safe fix.
blocking2.0: ? → -
Assignee: nobody → joshmoz
Sunil - are you still seeing this? I haven't seen any issues with fullscreen in the private builds.
I'll follow up with the bug opener on our side.
This bug is still occurring with fullscreen mode in Netflix.

It's especially bad when Firefox is maximized.  In this case, the Firefox window turns black and fully obscures the fullscreen video behind it, which can be very confusing.
This bug is marked as x86_64 Mac OS X but it repros on Windows 7 x64 as well.
I'm not clear on how to reproduce this. I watch Netflix videos in x86_64 Firefox 4 on Mac OS X regularly and have never seen it.

Does reproducing this require a multi-monitor setup? Can somebody give more detailed repro steps?
I can reproduce this only with a multiple monitor setup. I'm not sure sure if this is a bug we should fix or a bug Silverlight should fix. Perhaps they can move up a window level or two to avoid this?
If the fix is on our end then we'll likely need a fix for each platform. Jim - can you look into what is going on in Windows?
Josh, we had a previous conversation about this bug and you told us that we would have to fix it on our side as the new design puts the onus on plugin-developers to manage fullscreen functionality. We are investigating how we can do that.
Yeah, fullscreen was always something plugins were entirely responsible for, being out-of-process just makes it harder to do. I'm curious as to why our behavior is different with multiple monitors though.
Our dev noticed that Firefox at some indeterminate point of time, brings itself back to the top. Investigating further he noticed that the windows messages being received were different between Firefox and Chrome. Please find the logs attached for the browsers. 

What he observed was after we close a consent dialog to make the fullscreen window the topmost, the browser window is activated. Then we create and show a new fullscreen window, which causes the browser window to be deactivated in both cases. In firefox4, however, the browser window is reactivated again. I’ve highlighted the message in the log that I believe is responsible.
We really need a simple test case for this and STR so we can try to reproduce this in a debug environment. I can't do much with message logs.
Attached file Repro files
Unpack the attached file. 
Open FullScreenPinningTestPage.html in the browser.
Click on the button on top of the page.
A Message box pops up with a title "Do you want to allow this website to stay in fullscreen mode?. Click Yes. 
You should see the fullscreen popup and in Firefox 4, the browser window shows up on top of the Fullscreen window.
(In reply to comment #15)
> Created attachment 531458 [details]
> Repro files
> 
> Unpack the attached file. 
> Open FullScreenPinningTestPage.html in the browser.
> Click on the button on top of the page.
> A Message box pops up with a title "Do you want to allow this website to
> stay in fullscreen mode?. Click Yes. 
> You should see the fullscreen popup and in Firefox 4, the browser window
> shows up on top of the Fullscreen window.

Thanks Sunil. I can reproduce. We'll dig into this and figure out what's going on.
This bug was originally reported as a Mac OS X bug but seems to have morphed into a Windows bug. I assume that means it affects both platforms?
Assignee: joshmoz → jmathies
OS: Mac OS X → All
Hardware: x86_64 → All
Attached patch windows fix v.1Splinter Review
Easy one line patch review. The comment explains the reasoning. I've confirmed in a release build this addresses the problem and also ran this through some focus related tests cases to be sure it didn't break normal behavior.
Attachment #531652 - Flags: review?(bent.mozilla)
Jim, when the changes are approved, can you share out a tryserver build for us to test?

Josh, that is correct this started out as a Mac only issue but we started noticing the same issue in Windows too.
Attachment #531652 - Flags: review?(bent.mozilla) → review+
(In reply to comment #19)
> Jim, when the changes are approved, can you share out a tryserver build for
> us to test?
> 
> Josh, that is correct this started out as a Mac only issue but we started
> noticing the same issue in Windows too.

release try builds should be available here in a few hours:

https://ftp.mozilla.org/pub/mozilla.org/firefox/try-builds/jmathies@mozilla.com-147e2781d39d/
http://hg.mozilla.org/mozilla-central/rev/8fab4f313491
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
(In reply to comment #19)
> Jim, when the changes are approved, can you share out a tryserver build for
> us to test?
> 
> Josh, that is correct this started out as a Mac only issue but we started
> noticing the same issue in Windows too.

If this is still happening on Mac, lets file a new bug.
OS: All → Windows 7
Jim I've created bug https://bugzilla.mozilla.org/show_bug.cgi?id=657231 to track Mac issue.
Depends on: 618683
WFM using build identifier: Mozilla/5.0 (Windows NT 6.1; rv:6.0) Gecko/20100101 Firefox/6.0.
Mozilla/5.0 (X11; Linux i686; rv:6.0) Gecko/20100101 Firefox/6.0

Considering Comment 24 setting status to Verified Fixed. 

Thanks Teodosia for verifying this.
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: