Bug 608013 - When plugins receive the set focus event, confirm the parent window has focus before taking it. Fixes a fullscreen focus problem in Silverlight. r=bent.